<resources>
    <string name="app_name">Invoice</string>
    <string name="view_subtotal">Subtotal</string>
    <string name="view_discount">Discount%</string>
    <string name="view_discount_amt">Discount amt</string>
    <string name="view_total">Total</string>
    <string name="view_discount_percent">10%</string>
    <string name="view_discount_amount">$15.00</string>
    <string name="view_total_amount">$135.00</string>
    <string name="edit_text">150</string>
</resources>
